# lead-gen-pro

./: Dockerfile  Makefile  PROJECT_PROGRESS.md  pyproject.toml
.github/scripts/: update_progress.py
.github/workflows/: ci.yml
lead_gen_pro/: app.py  config.py  config_loader.py
lead_gen_pro/core/: db.py  lead_scorer.py  models.py  orchestrator.py
lead_gen_pro/scrapers/: base.py  google_dorks_scraper.py
lead_gen_pro/templates/: base.html  dashboard.html  lead_detail.html  login.html
lead_gen_pro/ui/: auth.py  routers.py
